static/css/fabrica.css
html,body
{
    width: 100%;
    height:100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
    overflow:scroll;
    -webkit-overflow-scrolling:touch;
}
@font-face { font-family: 'Odin Rounded'; src: url("../ttf/odinrounded.otf"); font-weight: bold; }
/* .nebula {
    background-image:url("../img/coworking.jpeg");
    background-size:cover;
    background-repeat:no-repeat;
    background-attachment:fixed;
} */
.question {
  font-weight: bold;
}
body {
	font-family:Lato, sans-serif;
  font-weight:lighter;
}
h1,h2,h3,h4,h5,h6,ul.nav { font-family: Lato, sans-serif; font-weight:bold; text-transform:uppercase; }
a,a:hover,a:active,a:focus { text-decoration:none !important; }
.footer { font-family: Roboto; font-size:1.5em;}

.facebook,.facebook:hover { text-align:left; background:#3C5A98; text-shadow:none; }
.twitter,.twitter:hover { text-align:left; background:#00ACED; text-shadow:none; }
.youtube,.youtube:hover { text-align:left; background:#FF1F20; text-shadow:none; }
.foursquare,.foursquare:hover { text-align:left; background:#0072B1; text-shadow:none; }
.github,.github:hover { text-align:left; background:white; text-shadow:none; }

.divider { margin:5px; }
.inline { display:inline; color:white; }
.hidden { display:none; }
.centered { text-align:center; }
.footer { background-color:white; color:black; margin-top:0; font-size: 1em; border-top:0; }

.input_id_card_pay_option_0 { display:none; }
.fixed-navbar {
	border:0px;
	border-radius:0px;
	padding:0px;
	margin-bottom:0px;
}

#navigation {
  padding: 15px;
  border: 1px solid #d7d7d7;
}

#learn {
  background:#001026;
  /* min-height:720px; */
}

#labs {
  background:#1d0b33;
  /* min-height:720px; */
}

.benefit {
   object-fit:contain;
   object-position: center;
}

.full { background-size: cover; }

.whitespace {
  background: white;
  color: black !important;
}

.navbar-nav li a {
  color: black !important;
  text-transform: uppercase;
  font-weight: bold;
}

